--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,6 @@
 <header tuiNavigationHeader>
     <span tuiNavigationLogo>
-        <tui-icon icon="@tui.home" />
-        <span tuiFade>Ordo</span>
+        <span tuiFade class="text-lg">Ordo</span>
     </span>
     <hr />
     <button tuiIconButton type="button" [style.border-radius.%]="100" (click)="logout()">
