--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,57 +1,19 @@
 <aside [style.height]="'calc(100vh - 48px)'" [tuiNavigationAside]="expanded">
-    <button iconStart="@tui.search" tuiAsideItem type="button">
-        Search
-    </button>
-    <a iconStart="@tui.users" tuiAsideItem [routerLink]="['/']">
-        Groups
+    <a iconStart="@tui.home" tuiAsideItem [routerLink]="['/dashboard']">
+        Dashboard
     </a>
+    <hr />
     <tui-aside-group>
-        <button iconStart="@tui.settings" tuiAsideItem tuiChevron type="button">
-            Settings
+        <button iconStart="@tui.settings" tuiAsideItem iconEnd="@tui.chevron-down" type="button">
+            Projects
             <ng-template>
-                <button tuiAsideItem type="button">
-                    Account
-                </button>
-                <button tuiAsideItem type="button">
-                    Notifications
-                </button>
-                <button tuiAsideItem type="button">
-                    Privacy
+                <button iconStart="@tui.circle" tuiAsideItem tuiFade type="button" *ngFor="let project of projects"
+                    [routerLink]="['/', project.$id]">
+                    {{project.name}}
                 </button>
             </ng-template>
         </button>
     </tui-aside-group>
-    <button iconStart="@tui.heart" tuiAsideItem type="button">
-        <span tuiFade>By default ellipsis is used but you can use fade too</span>
-    </button>
-    <button iconEnd="@tui.chevron-right" iconStart="@tui.ellipsis" tuiAsideItem tuiDropdownHover tuiDropdownOpen
-        type="button" [tuiDropdown]="more">
-        More
-        <ng-template #more let-close>
-            <tui-data-list tuiDataListDropdownManager>
-                <button iconStart="@tui.pencil" tuiAsideItem tuiOption type="button">
-                    Write
-                </button>
-                <button iconStart="@tui.pie-chart" tuiAsideItem tuiOption type="button" [tuiDropdown]="submenu">
-                    Categories
-                    <ng-template #submenu>
-                        <tui-data-list>
-                            <button tuiAsideItem type="button" (click)="close()">
-                                Fiction (will close menu)
-                            </button>
-                            <button tuiAsideItem type="button">
-                                Non-Fiction
-                            </button>
-                            <button tuiAsideItem type="button">
-                                Children
-                            </button>
-                        </tui-data-list>
-                    </ng-template>
-                </button>
-            </tui-data-list>
-        </ng-template>
-    </button>
-    <hr />
     <button iconStart="@tui.plus" tuiAsideItem type="button" [routerLink]="['/new-project']">
         Add Project
     </button>
