Account menu, project detail, dashboard view and resume

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -3,7 +3,7 @@
 <div [style.display]="'flex'">
     <app-sidebar></app-sidebar>
 
-    <main class="w-full m-4">
+    <main class="w-full overflow-auto bg-[var(--background-main)]">
         <router-outlet></router-outlet>
     </main>
 </div>
