--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,16 @@
         <span tuiFade class="text-lg">Ordo</span>
     </span>
     <hr />
-    <button tuiIconButton type="button" [style.border-radius.%]="100" (click)="logout()">
+    <button [style.border-radius.%]="100" [tuiDropdown]="content" [(tuiDropdownOpen)]="openMenu">
         <tui-avatar src="@tui.user" />
     </button>
+    <ng-template #content>
+        <tui-data-list>
+            <tui-opt-group>
+                <button tuiOption type="button" (click)="logout()">
+                    Logout
+                </button>
+            </tui-opt-group>
+        </tui-data-list>
+    </ng-template>
 </header>
