--- a/src/app/components/project/resume-view/resume-view.component.html
+++ b/src/app/components/project/resume-view/resume-view.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="p-4">
     <form [formGroup]="projectForm">
         <tui-textarea formControlName="description" class="field-medium" [expandable]="true" [maxLength]="400">
         </tui-textarea>
