--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
     </a>
     <hr />
     <tui-aside-group>
-        <button iconStart="@tui.settings" tuiAsideItem iconEnd="@tui.chevron-down" type="button">
+        <button iconStart="@tui.settings" tuiAsideItem tuiChevron type="button">
             Projects
             <ng-template>
                 <button iconStart="@tui.circle" tuiAsideItem tuiFade type="button" *ngFor="let project of projects"
