Migrating AppWrite to Firebase and updating project description

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <tui-root>
-    <div *ngIf="!loading">
+    <div *ngIf="!authService.loading">
         <router-outlet></router-outlet>
     </div>
-    <div class="fixed top-2/4 h-screen w-screen" *ngIf="loading">
+    <div class="fixed top-2/4 h-screen w-screen" *ngIf="authService.loading">
         <tui-loader [inheritColor]="true" />
     </div>
 </tui-root>
