--- a/src/app/components/project/board-view/board-view.component.html
+++ b/src/app/components/project/board-view/board-view.component.html
@@ -48,13 +48,10 @@
             <div tuiHeader="xs" class="pb-2">
                 <button size="m" appearance="flat" tuiButton tuiTitle type="button"
                     class="p-2 !text-[var(--color-text-weak)]" (click)="addSection()">
-                    <tui-icon icon="@tui.plus" [style.font-size]="'20px'" /> Add section
+                    <span>
+                        <tui-icon icon="@tui.plus" [style.font-size]="'20px'" /> Add section
+                    </span>
                 </button>
-            </div>
-
-            <div class="section-list">
-                <div class="min-h-20">
-                </div>
             </div>
         </div>
     </div>
