--- a/src/app/pages/project/project.component.html
+++ b/src/app/pages/project/project.component.html
@@ -34,7 +34,7 @@
         @if (activetab === 0) {
         <app-resume-view [project]="project"></app-resume-view>
         } @else if (activetab === 2) {
-        <app-board-view [sections]="project?.sections"></app-board-view>
+        <app-board-view [project]="project"></app-board-view>
         }
     </div>
 </div>
