--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,14 +1,27 @@
 <div class="container mx-auto p-8">
     <div tuiHeader="m">
-        <h2 tuiTitle>Projects</h2>
+        <h2 tuiTitle class="flex items-center !flex-row">Projects <span
+                class="text-lg">({{projects?.length}}/{{MAX_PROJECTS}})</span>
+        </h2>
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 mt-6">
-        <div tuiCardMedium tuiSurface class="dashboard-card cursor-pointer" *ngFor="let project of projects"
-            [routerLink]="['/', project.id]">
+        <div tuiCardMedium tuiSurface
+            class="dashboard-card cursor-pointer transition duration-300 ease-in-out transform hover:scale-110"
+            *ngFor="let project of projects" [routerLink]="['/', project.id]">
             <h2 tuiTitle>
                 {{project.name}}
                 <span tuiSubtitle>{{project.description}}</span>
             </h2>
         </div>
+
+
+        @if(projects?.length < MAX_PROJECTS) { <div tuiCardMedium tuiSurface
+            class="dashboard-card cursor-pointer transition duration-300 ease-in-out transform hover:scale-110"
+            [routerLink]="['/new-project']">
+            <h2 tuiTitle class="w-full h-full flex justify-center items-center !text-[var(--color-text-weak)]">
+                <tui-icon icon="@tui.plus" class="text-xl" /> Add project
+            </h2>
     </div>
+    }
+</div>
 </div>
