--- a/src/app/pages/project/project.component.scss
+++ b/src/app/pages/project/project.component.scss
@@ -1,3 +1,9 @@
 tui-loader {
     min-inline-size: 3.5rem;
 }
+
+.project-title {
+    font-size: 24px;
+    font-weight: 600;
+    padding: 0 !important;
+}
