--- a/src/app/components/project/resume-view/resume-view.component.html
+++ b/src/app/components/project/resume-view/resume-view.component.html
@@ -1,7 +1,7 @@
 <div class="p-4">
     <form [formGroup]="projectForm">
-        <tui-textarea formControlName="description" class="field-medium" [expandable]="true" [maxLength]="400"
-            (input)="onInputChange()">
+        <tui-textarea formControlName="description" class="field-medium no-shadow-input" [expandable]="true"
+            [maxLength]="400" (input)="onInputChange()">
         </tui-textarea>
     </form>
 </div>
