--- a/src/app/components/project/board-view/board-view.component.scss
+++ b/src/app/components/project/board-view/board-view.component.scss
@@ -9,6 +9,11 @@
 .section-title {
     font-weight: 600 !important;
     font-size: 20px !important;
+    border: 1px solid transparent;
+    transition: border-color 0.6s ease;
+    border-radius: 8px;
+    padding: 5px;
+    background-color: transparent;
 }
 
 .options-button {
@@ -37,6 +42,13 @@
     margin-bottom: 10px;
     min-height: 70px;
     cursor: pointer;
+    border: 1px solid transparent;
+    transition: border-color 0.6s ease;
+}
+
+.section-title:hover,
+.card-board:hover {
+    border-color: var(--tui-border-focus);
 }
 
 .cdk-drag-preview {
