--- a/src/app/pages/project/project.component.scss
+++ b/src/app/pages/project/project.component.scss
@@ -3,7 +3,15 @@ tui-loader {
 }
 
 .project-title {
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 600;
-    padding: 0 !important;
+    padding: 3px 5px;
+    border: 1px solid transparent;
+    transition: border-color 0.6s ease;
+    border-radius: 8px;
+    margin-right: 5px;
+}
+
+.project-title:hover {
+    border-color: var(--tui-border-focus);
 }
