--- a/src/app/components/project/board-view/board-view.component.scss
+++ b/src/app/components/project/board-view/board-view.component.scss
@@ -14,6 +14,7 @@
     border-radius: 8px;
     padding: 5px;
     background-color: transparent;
+    text-overflow: ellipsis;
 }
 
 .options-button {
