--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -5,15 +5,16 @@
         </h2>
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 mt-6">
+        @for (project of projects; track project) {
         <div tuiCardMedium tuiSurface
             class="dashboard-card cursor-pointer transition duration-300 ease-in-out transform hover:scale-110"
-            *ngFor="let project of projects" [routerLink]="['/', project.id]">
+            [routerLink]="['/', project.id]">
             <h2 tuiTitle>
                 {{project.name}}
                 <span tuiSubtitle>{{project.description}}</span>
             </h2>
         </div>
-
+        }
 
         @if(projects?.length < MAX_PROJECTS) { <div tuiCardMedium tuiSurface
             class="dashboard-card cursor-pointer transition duration-300 ease-in-out transform hover:scale-110"
