--- a/src/app/pages/new-project/new-project.component.html
+++ b/src/app/pages/new-project/new-project.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-sm p-4">
+<div class="new-project-container p-4">
     <div class="flex items-center mb-2">
         <span class="text-lg">{{projects?.length}} of {{MAX_PROJECTS}} projects</span>
         @if(projects?.length == MAX_PROJECTS) {
@@ -8,14 +8,15 @@
     </div>
 
     <form [formGroup]="projectForm">
-        <tui-input formControlName="name">
+        <tui-input formControlName="name" class="no-shadow-input">
             Project name
             <input tuiTextfieldLegacy />
         </tui-input>
-        <tui-textarea formControlName="description" class="mt-4 field-medium" [expandable]="true" [maxLength]="400">
+        <tui-textarea formControlName="description" class="mt-4 field-medium no-shadow-input" [expandable]="true"
+            [maxLength]="400">
             Description
         </tui-textarea>
-        <div class="mt-4">
+        <div class="mt-4 text-right">
             <button size="m" tuiButton type="submit" appearance="whiteblock" [disabled]="projectForm.invalid || saving"
                 (click)="submitProject()">
                 Submit
