--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,10 @@
     background-color: #2e2e2ed1;
 }
 
+.options-button {
+    color: var(--color-text-weak) !important;
+}
+
 .no-outline-input {
 
     [tuiWrapper],
